--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -63,6 +63,10 @@ relay-log-index = relay-bin.index
 {% endif %}
 {% endif %}
 
+{% if '8.0.' in mysql_cli_version.stdout %}
+default_authentication_plugin=mysql_native_password
+{% endif %}
+
 {% if '8.0.' not in mysql_cli_version.stdout %}
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links = 0
