--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -114,6 +114,12 @@ innodb_log_file_size = {{ mysql_innodb_log_file_size }}
 innodb_log_buffer_size = {{ mysql_innodb_log_buffer_size }}
 innodb_flush_log_at_trx_commit = {{ mysql_innodb_flush_log_at_trx_commit }}
 innodb_lock_wait_timeout = {{ mysql_innodb_lock_wait_timeout }}
+{% if '8.0.' in mysql_cli_version.stdout %}
+#innodb_autoinc_lock_mode = 1
+default_authentication_plugin=mysql_native_password
+#mysql57 didn't cache information schema autoinc
+information_schema_stats_expiry = 0
+{% endif %}
 
 [mysqldump]
 quick
